--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>Tree Creator</title>
 <script type="text/javascript">
 var can,ctx,can1,ctx1;
 var cw,ch;
